Some bug fixes concerning variable numbering

--- a/css/edit.less
+++ b/css/edit.less
@@ -30,6 +30,9 @@
     td > div {
       display: inline-flex;
     }
+    .details {
+      color: dimgrey;
+    }
     .tools {
       float: right;
       .btn-var-count {
