--- a/partials/view.phtml
+++ b/partials/view.phtml
@@ -17,7 +17,7 @@ if ($__aid && $__algorithm && ($__public || $__owner || $__rights > 0)):
     $tags = $__algorithm->tags;
 
 // prepare variables
-    $vars = json_decode($__algorithm->variables);
+    $vars = json_decode($__algorithm->variables, true);
 
 // prepare parameters
     $params = (isset($_GET['p']) and is_array($_GET['p'])) ? $_GET['p'] : false;
@@ -136,7 +136,7 @@ if ($__aid && $__algorithm && ($__public || $__owner || $__rights > 0)):
                     <div class="panel-heading" data-target="#pseudocode">
                         <h4 class="panel-title">
                             <span class="glyphicon glyphicon-chevron-down"></span>
-                            <?= $name ?>
+                            <?= $name ? $name : $l10n['untitled_algorithm'] ?>
                         </h4>
                     </div>
                     <div id="pseudocode" class="panel-collapse">
@@ -210,6 +210,7 @@ if ($__aid && $__algorithm && ($__public || $__owner || $__rights > 0)):
                                     </thead>
                                     <tbody>
                                     <?php foreach ($vars as $vid => $var):
+                                        $var = (object) $var;
                                         switch ($var->type) {
                                             // compute int elements
                                             case 'elem-int':
