--- a/partials/settings.phtml
+++ b/partials/settings.phtml
@@ -14,13 +14,10 @@ require_once BASEDIR . "partials/headers/algorithmHeader.phtml";
 
 <?php if ($__aid && $__uid && ($__owner || $__rights > 0)): ?>
     <!-- ERROR MESSAGE -->
-    <div id="editAlert" class="alert alert-danger alert-dismissible" style="display:none">
-        <button id="editAlertClose" type="button" class="close">
-            <span aria-hidden="true">&times;</span><span class="sr-only"><?= $l10n['close'] ?></span>
-        </button>
+    <div id="alert" class="alert alert-danger alert-dismissible" role="alert" style="display:none">
+        <button type="button" class="close" aria-label="<?= $l10n['close'] ?>"><span aria-hidden="true">&times;</span></button>
         <strong><?= $l10n['error'] ?></strong>
-
-        <div id="editAlertText"></div>
+        <div id="alertText"></div>
     </div>
     <!-- ERROR MESSAGE END -->
 
