--- a/partials/user.phtml
+++ b/partials/user.phtml
@@ -33,21 +33,15 @@ if (isset($_GET['uid'])) {
     <!-- HEADER END -->
 
     <!-- CONTENT -->
-    <div id="userSuccess" class="alert alert-success alert-dismissible" style="display:none">
-        <button id="userSuccessClose" type="button" class="close">
-            <span aria-hidden="true">&times;</span><span class="sr-only"><?= $l10n['close'] ?></span>
-        </button>
+    <div id="success" class="alert alert-success alert-dismissible" role="alert" style="display:none">
+        <button type="button" class="close" aria-label="<?= $l10n['close'] ?>"><span aria-hidden="true">&times;</span></button>
         <strong><?= $l10n['success'] ?></strong>
-
-        <div id="userSuccessText"></div>
+        <div id="successText"></div>
     </div>
-    <div id="userAlert" class="alert alert-danger alert-dismissible" style="display:none">
-        <button id="userAlertClose" type="button" class="close">
-            <span aria-hidden="true">&times;</span><span class="sr-only"><?= $l10n['close'] ?></span>
-        </button>
+    <div id="alert" class="alert alert-danger alert-dismissible" role="alert" style="display:none">
+        <button type="button" class="close" aria-label="<?= $l10n['close'] ?>"><span aria-hidden="true">&times;</span></button>
         <strong><?= $l10n['error'] ?></strong>
-
-        <div id="userAlertText"></div>
+        <div id="alertText"></div>
     </div>
     <div class="row">
         <!-- LEFT COLUMN -->
