--- a/css/view.less
+++ b/css/view.less
@@ -1,5 +1,9 @@
 @import "algorithm";
 
+#scopes-head {
+  margin-bottom: 1em;
+}
+
 .algorithm {
   .cursor > table > tbody > tr {
     > .handle > .cursor-icon {
@@ -128,6 +132,13 @@
     max-width: 100px;
     float: right;
   }
+}
+
+iframe {
+  border: none;
+  width: 100%;
+  height: 100%;
+  min-height: 720px;
 }
 
 .highlight-write {
